# atomhttp

./:  CONTRIBUTING.md  .gitignore  LICENSE  README.md  pyproject.toml
atomhttp/: __init__.py  client.py  version.py
atomhttp/adapters/: __init__.py  http_adapter.py  mock_adapter.py
atomhttp/auth/: __init__.py  basic_auth.py  bearer_auth.py
atomhttp/core/: __init__.py  adapters.py  config.py  defaults.py  form_data.py  request.py  response.py
atomhttp/errors/: __init__.py  http_errors.py
atomhttp/interceptors/: __init__.py  manager.py  request_interceptor.py  response_interceptor.py
atomhttp/progress/: __init__.py  upload_progress.py
atomhttp/transforms/: __init__.py  data_serializer.py  request_transform.py  response_transform.py
atomhttp/utils/: __init__.py  cookies.py  helpers.py  redirect.py
scripts/: test_clean.sh  tests.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_auth.py  test_basic_requests.py  test_blob.py  test_concurrent.py  test_error_handling.py  test_headers_params.py  test_helpers.py  test_interceptors.py  test_limits.py  test_progress.py  test_validate_status.py
tests/unit/: __init__.py  test_adapters.py  test_client.py  test_config.py  test_defaults.py  test_formdata.py  test_response.py  test_utils.py
